<resources>
    <string name="app_name">Trip Manager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="reset_password">Forgot password? Reset here.</string>
    <string name="WS_Url">http://192.168.2.106/TripManager/</string>
    <string name="Place_API">AIzaSyDgi-HGKLaLiB9ckSj1vRepV5EoXt5GPrQ</string>
    <string name="trip_name">Trip Name</string>
    <string name="select_place">Select Place</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="create_new_trip">Create New Trip</string>
    <string name="required_field">*Required</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="trips">Trips</string>
    <string name="dates">Dates</string>
    <string name="placeName">Place Name</string>
    <string name="or">OR</string>
    <string name="explore">Explore</string>
    <string name="username">Username</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="query">Query</string>
    <string name="jaydev_desai">Jaydev Desai</string>
    <string name="queries">Queries</string>
    <string name="no_queries">Oops! World has no query.</string>
    <string name="post">Post</string>
    <string name="what_s_your_query">What\'s your query?</string>
    <string name="let_the_world_help_you">Let the world help you.</string>
    <string name="looks_like_you_don_t_plan_your_trips">Looks like you don\'t plan your trips.</string>
    <string name="replies">Replies</string>
    <string name="reply">Reply</string>
    <string name="reply_query">Reply Query</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="title_activity_reservation">ReservationActivity</string>
    <string name="document">Document</string>
    <string name="add_your_notes_here">Add your notes here.</string>
    <string name="save">Save</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="item_1">Item 1</string>
    <string name="add_shopping_label">Add Shopping Item</string>
    <string name="add">Add</string>
    <string name="item_name">Item name</string>
    <string name="bought_label">Bought</string>
    <string name="bought_label_view">Bought</string>
    <string name="uploading">Uploading</string>
    <string name="upload">Upload</string>
    <string name="enter_name">Enter name</string>
    <string name="your_name">Your Name</string>
    <string name="posts">Posts</string>
    <string name="your_queries">Your queries</string>
    <string name="birth_date">Birth Date</string>
    <string name="money_left">Money Left</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="total_cash">Total Cash</string>
    <string name="total_cash_taking_to_trip">Total Cash Taking to Trip</string>
    <string name="set_profile">Set Profile</string>
    <string name="complete">Complete</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change">Change</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="loading">loading…</string>
    <string name="edit">EDIT</string>
    <string name="no_notes_added">No notes added</string>
</resources>
