<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/Logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textAlignment="center"
        android:fontFamily="@font/rubik_bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/emailInput"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="jelly_bean" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:errorEnabled="true"
        android:theme="@style/TextInputLayoutAppearanceDark"
        app:helperText="@string/required_field"
        app:helperTextTextAppearance="@style/HelperText"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Logo"
        app:layout_constraintVertical_chainStyle="packed">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:focusedByDefault="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:errorEnabled="true"
        android:theme="@style/TextInputLayoutAppearanceDark"
        app:helperText="@string/required_field"
        app:helperTextTextAppearance="@style/HelperText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintVertical_chainStyle="packed">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/rubik_regular"
        android:background="@drawable/btn_rounded_white"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintBottom_toTopOf="@id/forgetPwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/forgetPwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/reset_password"
        android:fontFamily="@font/rubik_regular"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/orBar"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <FrameLayout
        android:id="@+id/orBar"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/forgetPwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signupBtn"
        app:layout_constraintVertical_chainStyle="packed"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_gravity="center_vertical"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/orTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/or"
            android:background="@color/colorPrimary"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center"
            tools:targetApi="jelly_bean" />

    </FrameLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signupBtn"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:fontFamily="@font/rubik_regular"
        android:background="@drawable/btn_rounded_white"
        android:text="@string/signup"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/orBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />


</android.support.constraint.ConstraintLayout>