<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorWhite">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/createQueryTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:fontFamily="@font/rubik_medium"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical|start"
                android:text="@string/what_s_your_query"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/queryTextEdt"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorText"
                android:background="@drawable/primary_color_outline"
                android:textColorHint="@color/colorPrimaryLight"
                android:textAllCaps="false"
                android:focusedByDefault="true"
                android:focusable="true"

                android:padding="8dp"
                android:gravity="top"
                android:textSize="18sp"
                android:hint="@string/let_the_world_help_you"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@id/createQueryTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/buttonsLayout"/>

            <LinearLayout
                android:id="@+id/buttonsLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:gravity="end"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    android:layout_margin="8dp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/postBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/post"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>